# skiplist

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_results.csv  bestcase_benchmark_results.csv
include/: skiplist.h  skiplist_generic.h  skiplist_i32.h  skiplist_i64.h  skiplist_u32.h  skiplist_u64.h  skipmap_generic.h
src/: skiplist_i32.c  skiplist_i64.c  skiplist_u32.c  skiplist_u64.c
test/: CMakeLists.txt  best_case_benchmark.c  generic_list_complex_test.c  generic_list_test.c  generic_map_complex_test.c  generic_map_test.c  main.c  test_insert.c  test_isEmpty.c  test_link_i32.c  test_link_i64.c  test_link_u32.c  test_link_u64.c  test_pop.c  test_remove.c  test_search.c  test_size.c
